--- a/Backend/resources/static/error/404.html
+++ b/Backend/resources/static/error/404.html
@@ -1,46 +1,422 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
     <style>
+        @import url("https://fonts.googleapis.com/css?family=Dosis:300,400,500");
 
-        .wrap-error {
-            background-color: #667bf2;
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23f0b608' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23e6d710' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23e7af05' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23e7d808' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23d8a408' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23f1e213' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23f0b607' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23e4d506' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23eab822' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%23e8da14' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23e8b008' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23edde14' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
-            background-attachment: fixed;
+        @-moz-keyframes rocket-movement {
+            100% {
+                -moz-transform: translate(1200px, -600px);
+            }
+        }
+        @-webkit-keyframes rocket-movement {
+            100% {
+                -webkit-transform: translate(1200px, -600px);
+            }
+        }
+        @keyframes rocket-movement {
+            100% {
+                transform: translate(1200px, -600px);
+            }
+        }
+        @-moz-keyframes spin-earth {
+            100% {
+                -moz-transform: rotate(-360deg);
+                transition: transform 20s;
+            }
+        }
+        @-webkit-keyframes spin-earth {
+            100% {
+                -webkit-transform: rotate(-360deg);
+                transition: transform 20s;
+            }
+        }
+        @keyframes spin-earth {
+            100% {
+                -webkit-transform: rotate(-360deg);
+                transform: rotate(-360deg);
+                transition: transform 20s;
+            }
+        }
+
+        @-moz-keyframes move-astronaut {
+            100% {
+                -moz-transform: translate(-160px, -160px);
+            }
+        }
+        @-webkit-keyframes move-astronaut {
+            100% {
+                -webkit-transform: translate(-160px, -160px);
+            }
+        }
+        @keyframes move-astronaut {
+            100% {
+                -webkit-transform: translate(-160px, -160px);
+                transform: translate(-160px, -160px);
+            }
+        }
+        @-moz-keyframes rotate-astronaut {
+            100% {
+                -moz-transform: rotate(-720deg);
+            }
+        }
+        @-webkit-keyframes rotate-astronaut {
+            100% {
+                -webkit-transform: rotate(-720deg);
+            }
+        }
+        @keyframes rotate-astronaut {
+            100% {
+                -webkit-transform: rotate(-720deg);
+                transform: rotate(-720deg);
+            }
+        }
+
+        @-moz-keyframes glow-star {
+            40% {
+                -moz-opacity: 0.3;
+            }
+            90%,
+            100% {
+                -moz-opacity: 1;
+                -moz-transform: scale(1.2);
+            }
+        }
+        @-webkit-keyframes glow-star {
+            40% {
+                -webkit-opacity: 0.3;
+            }
+            90%,
+            100% {
+                -webkit-opacity: 1;
+                -webkit-transform: scale(1.2);
+            }
+        }
+        @keyframes glow-star {
+            40% {
+                -webkit-opacity: 0.3;
+                opacity: 0.3;
+            }
+            90%,
+            100% {
+                -webkit-opacity: 1;
+                opacity: 1;
+                -webkit-transform: scale(1.2);
+                transform: scale(1.2);
+                border-radius: 999999px;
+            }
+        }
+
+        .spin-earth-on-hover {
+            transition: ease 200s !important;
+            transform: rotate(-3600deg) !important;
+        }
+
+        html,
+        body {
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            font-family: "Dosis", sans-serif;
+            font-weight: 300;
+            -webkit-user-select: none; /* Safari 3.1+ */
+            -moz-user-select: none; /* Firefox 2+ */
+            -ms-user-select: none; /* IE 10+ */
+            user-select: none; /* Standard syntax */
+        }
+
+        .bg-purple {
+            background: url(/quik/404Page/img/bg_purple.png);
+            background-repeat: repeat-x;
             background-size: cover;
-            height: calc(var(--vh, 1vh) * 100);
+            background-position: left top;
+            height: 100%;
+            overflow: hidden;
         }
-        .wrap-error h1 {
-            font-size: 6.875rem;
-            letter-spacing: -13px;
-            line-height: 1;
-            font-family: montserrat, sans-serif;
+
+        .custom-navbar {
+            padding-top: 15px;
         }
-        h1 span {
-            text-shadow: -8px 0 0 rgb(102 123 242);
+
+        .brand-logo {
+            margin-left: 25px;
+            margin-top: 5px;
+            display: inline-block;
         }
-        .text-9xl {
-            font-size: 5.5rem;
+
+        .navbar-links {
+            display: inline-block;
+            float: right;
+            margin-right: 15px;
+            text-transform: uppercase;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            /*    overflow: hidden;*/
+            display: flex;
+            align-items: center;
+        }
+
+        li {
+            float: left;
+            padding: 0px 15px;
+        }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            letter-spacing: 2px;
+            font-size: 12px;
+
+            -webkit-transition: all 0.3s ease-in;
+            -moz-transition: all 0.3s ease-in;
+            -ms-transition: all 0.3s ease-in;
+            -o-transition: all 0.3s ease-in;
+            transition: all 0.3s ease-in;
+        }
+
+        li a:hover {
+            color: #ffcb39;
+        }
+
+        .btn-request {
+            padding: 10px 25px;
+            border: 1px solid #ffcb39;
+            border-radius: 100px;
+            font-weight: 400;
+        }
+
+        .btn-request:hover {
+            background-color: #ffcb39;
+            color: #fff;
+            transform: scale(1.05);
+            box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .btn-go-home {
+            position: relative;
+            z-index: 200;
+            margin: 15px auto;
+            width: 100px;
+            padding: 10px 15px;
+            border: 1px solid #ffcb39;
+            border-radius: 100px;
+            font-weight: 400;
+            display: block;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            letter-spacing: 2px;
+            font-size: 11px;
+
+            -webkit-transition: all 0.3s ease-in;
+            -moz-transition: all 0.3s ease-in;
+            -ms-transition: all 0.3s ease-in;
+            -o-transition: all 0.3s ease-in;
+            transition: all 0.3s ease-in;
+        }
+
+        .btn-go-home:hover {
+            background-color: #ffcb39;
+            color: #fff;
+            transform: scale(1.05);
+            box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .central-body {
+            /*    width: 100%;*/
+            padding: 17% 5% 10% 5%;
+            text-align: center;
+        }
+
+        .objects img {
+            z-index: 90;
+            pointer-events: none;
+        }
+
+        .object_rocket {
+            z-index: 95;
+            position: absolute;
+            transform: translateX(-50px);
+            top: 75%;
+            pointer-events: none;
+            animation: rocket-movement 200s linear infinite both running;
+        }
+
+        .object_earth {
+            position: absolute;
+            top: 20%;
+            left: 15%;
+            z-index: 90;
+            /*    animation: spin-earth 100s infinite linear both;*/
+        }
+
+        .object_moon {
+            position: absolute;
+            top: 12%;
+            left: 25%;
+            /*
+        transform: rotate(0deg);
+        transition: transform ease-in 99999999999s;
+    */
+        }
+
+        .earth-moon {
+        }
+
+        .object_astronaut {
+            animation: rotate-astronaut 200s infinite linear both alternate;
+        }
+
+        .box_astronaut {
+            z-index: 110 !important;
+            position: absolute;
+            top: 60%;
+            right: 20%;
+            will-change: transform;
+            animation: move-astronaut 50s infinite linear both alternate;
+        }
+
+        .image-404 {
+            position: relative;
+            z-index: 100;
+            pointer-events: none;
+        }
+
+        .stars {
+            background: url(/quik/404Page/img/overlay_stars.svg);
+            background-repeat: repeat;
+            background-size: contain;
+            background-position: left top;
+        }
+
+        .glowing_stars .star {
+            position: absolute;
+            border-radius: 100%;
+            background-color: #fff;
+            width: 3px;
+            height: 3px;
+            opacity: 0.3;
+            will-change: opacity;
+        }
+
+        .glowing_stars .star:nth-child(1) {
+            top: 80%;
+            left: 25%;
+            animation: glow-star 2s infinite ease-in-out alternate 1s;
+        }
+        .glowing_stars .star:nth-child(2) {
+            top: 20%;
+            left: 40%;
+            animation: glow-star 2s infinite ease-in-out alternate 3s;
+        }
+        .glowing_stars .star:nth-child(3) {
+            top: 25%;
+            left: 25%;
+            animation: glow-star 2s infinite ease-in-out alternate 5s;
+        }
+        .glowing_stars .star:nth-child(4) {
+            top: 75%;
+            left: 80%;
+            animation: glow-star 2s infinite ease-in-out alternate 7s;
+        }
+        .glowing_stars .star:nth-child(5) {
+            top: 90%;
+            left: 50%;
+            animation: glow-star 2s infinite ease-in-out alternate 9s;
+        }
+
+        @media only screen and (max-width: 600px) {
+            .navbar-links {
+                display: none;
+            }
+
+            .custom-navbar {
+                text-align: center;
+            }
+
+            .brand-logo img {
+                width: 120px;
+            }
+
+            .box_astronaut {
+                top: 70%;
+            }
+
+            .central-body {
+                padding-top: 25%;
+            }
         }
     </style>
 </head>
-<body>
-<div class="wrap-error">
-    <div class="d-flex align-items-center h-100">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 offset-sm-2 text-center text-white">
-                    <h1 class=""><span>4</span><span>0</span><span>4</span></h1>
-                    <h5 class="">Oops! Page not found</h5>
-                    <p class="mb-4">we are sorry, but the page you requested was not found</p>
-                    <button class="btn btn-dark" href="#" title="home url">
-                        Go home
-                    </button>
-                </div>
-            </div>
+<!--
+VIEW IN FULL SCREEN MODE
+FULL SCREEN MODE: /quik/404Page/404.html
+
+DRIBBBLE: https://dribbble.com/shots/4330167-404-Page-Lost-In-Space
+-->
+
+<body class="bg-purple">
+<div class="stars">
+    <div class="custom-navbar">
+        <div class="brand-logo">
+            <img src="/quik/404Page/img/logo.svg" width="80px" />
+
+    </div>
+    <div class="central-body">
+        <img
+                class="image-404"
+                src="/quik/404Page/img/404.svg"
+                width="300px"
+        />
+        <a
+                href=""
+                class="btn-go-home"
+                target="_blank"
+        >GO BACK HOME</a
+        >
+    </div>
+    <div class="objects">
+        <img
+                class="object_rocket"
+                src="/quik/404Page/img/rocket.svg"
+                width="40px"
+        />
+        <div class="earth-moon">
+            <img
+                    class="object_earth"
+                    src="/quik/404Page/img/earth.svg"
+                    width="100px"
+            />
+            <img
+                    class="object_moon"
+                    src="/quik/404Page/img/moon.svg"
+                    width="80px"
+            />
         </div>
+        <div class="box_astronaut">
+            <img
+                    class="object_astronaut"
+                    src="/quik/404Page/img/astronaut.svg"
+                    width="140px"
+            />
+        </div>
+    </div>
+    <div class="glowing_stars">
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
     </div>
 </div>
 </body>
